# markdown_editor_ocaml

./: .gitignore  LICENSE  Makefile  README.md  dune-project  markdown_editor_ocaml.opam
docs/: fiche-ocaml-A4.html  ocaml-pedagogie.md
examples/: sample.md
lib/: config.ml  config.mli  document.ml  document.mli  dune  editor_state.ml  editor_state.mli  file_service.ml  file_service.mli  markdown_parser.ml  markdown_parser.mli  markdown_renderer.ml  markdown_renderer.mli  recent_files.ml  recent_files.mli  text_search.ml  text_search.mli
test/: dune  run_tests.ml  test_config.ml  test_document.ml  test_editor_state.ml  test_file_service.ml  test_markdown_renderer.ml  test_recent_files.ml  test_text_search.ml
